k8s/apps/accounting/mealie/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: mealie
  labels:
    app.kubernetes.io/name: mealie
    app.kubernetes.io/instance: mealie
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: mealie
      app.kubernetes.io/instance: mealie
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mealie
        app.kubernetes.io/instance: mealie
    spec:
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v3.28.0
          ports:
            - name: http
              containerPort: 9000
          volumeMounts:
            - name: data
              mountPath: /app/data
            - name: pg-certs
              readOnly: true
              mountPath: /pg-certs
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mealie-data
        - name: pg-certs
          secret:
            secretName: mealie-pg-ca
