k8s/apps/accounting/mealie/ingress.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
  labels:
    app.kubernetes.io/name: mealie
    app.kubernetes.io/instance: mealie
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mealie
    app.kubernetes.io/instance: mealie
  ports:
    - name: http
      port: 9000
      targetPort: http
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
  namespace: mealie
  labels:
    app.kubernetes.io/name: mealie
    app.kubernetes.io/instance: mealie
spec:
  ingressClassName: ingress-internal-traefik
  rules:
    - host: mealie.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mealie
                port:
                  name: http
